# planning_cognitve_systems_course

./: README.md
.github/workflows/: master.yaml
blackboard/blackboard/: CMakeLists.txt  package.xml
blackboard/blackboard/test/: blackboard_node_test.cpp  blackboard_test.cpp
blackboard/blackboard_msgs/: CMakeLists.txt  package.xml
blackboard/blackboard_msgs/msg/: Entry.msg
pddl/: blocks_domain.pddl  blocks_problem_0.pddl  blocks_typed_domain.pddl  blocks_typed_problem_0.pddl  briefcase_domain.pddl  briefcase_problem_0.pddl  domain_charging.pddl  gripper_problem_1.pddl  gripper_problem_2.pddl  interstellar_domain.pddl  interstellar_problem_0.pddl  moving_domain.pddl  moving_domain_2.pddl  moving_problem_1.pddl  problem_charging.pddl  robots_domain.pddl  robots_problem_0.pddl  travel_domain.pddl  travel_problem_0.pddl
robots/: README.md  package.xml  setup.cfg  setup.py
robots/launch/: slam_tiago.launch.py  tiago.launch.py  tiago_camera.launch.py  tiago_localization.launch.py  tiago_nav.launch.py  tiago_nodoors.launch.py
robots/params/: nav2_params.yaml
robots/resource/: tiago.yaml
robots/worlds/: apartment.pgm  apartment.yaml  complete_apartment.wbt  nodoors_apartment.wbt  ros_tiago.wbt  tiago++_example.wbt
test_ci/: CMakeLists.txt  package.xml
test_ci/include/test_ci/: TestNode.hpp
test_ci/src/: main_program.cpp
test_ci/src/test_ci/: TestNode.cpp
test_ci/test/: CMakeLists.txt  node_test.cpp
test_hfsm/: CMakeLists.txt  package.xml
test_hfsm/fsm/: MyHFSM.bica  MyHFSM.cpp  MyHFSM.hpp
test_hfsm/src/: MyHFSMImpl.cpp
(+3 files in other folders)
